#       $NetBSD: CHANGES-4.0,v 1.1.4.178 2007/06/06 15:59:35 liamjfoy Exp $

A complete list of changes from the initial NetBSD 4.0 branch on
1 December 2006 until the 4.0 release:

gnu/usr.bin/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h					patched by hand

	Welcome to 4.0_BETA2

sys/lib/libsa/dosfs.c				1.11

	make bootxx_msdos fit in 8k again; thanks, __internal_memset_, for
	spilling registers all over the place.
	[dogcow, ticket #240]

sys/uvm/uvm_swap.c				1.114

	We are required to hold uvm.swap_data_lock here too.
	[elad, ticket #241]

sys/dev/pci/ahcisata.c				1.2

	Don't call the done callback twice if a special action is waiting on
	the queue. Don't forget to free the xfer in the normal bio path.
	[bouyer, ticket #242]

usr.bin/msgc/msg_sys.def			1.37

	Eliminate an alloca(3) use. This is required for USE_SSP builds to
	complete.
	[tls, ticket #243]

sys/conf/Makefile.kern.inc			1.95

	Add arch/xen/i386/gdt.c to list of kernel files that do variable-size
	allocations on the stack. This allocation could potentially be quite
	large -- I am not sure how to best fix that.
	Fixes USE_SSP i386 build.sh failure.
	[tls, ticket #244]

share/man/man9/kauth.9				1.37
sys/dev/i2o/dpti.c				1.31
sys/dev/i2o/iop.c				1.62
sys/dev/ic/dpt.c				1.55
sys/dev/ic/icp_ioctl.c				1.14
sys/dev/ic/mlx.c				1.49
sys/dev/pci/amr.c				1.43
sys/dev/pci/mly.c				1.33
sys/dev/pci/twe.c				1.82
sys/dev/tc/stic.c				1.37
sys/kern/kern_auth.c				1.33
sys/secmodel/bsd44/secmodel_bsd44_securelevel.c	1.19
sys/sys/kauth.h					1.25

	Change kauth(9) KPI for kauth_authorize_device_passthru() to add
	another argument, u_long, serving as a bit-mask of generic requests
	for the passthru request.
	[elad, ticket #247]

doc/CHANGES					patch

	Add entry for etherip(4).
	[rpaulo, ticket #249]

sys/miscfs/procfs/procfs_vnops.c		1.141

	Make procfs work again for non-root users.
	[elad, ticket #248]

gnu/usr.bin/gdb53/libiberty/Makefile		1.5
